# autonomous-tunnel-crack-detection-robot

./: .gitignore  README.md  crack-seg.yaml  crack_preprocess.py  requirements.txt
crack_preprocess/: crack_preprocess.py
install/: local_setup.sh  setup.sh
install/my-test-package/share/my-test-package/: package.ps1  package.sh
install/tunnel_inspection_sim/share/tunnel_inspection_sim/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/tunnel_inspection_sim/share/tunnel_inspection_sim/models/tunnel/: model.config  model.sdf  tunnel.mtl
install/tunnel_inspection_sim/share/tunnel_inspection_sim/worlds/: tunnel_world.sdf
log/: latest_build
src/tunnel_inspection_sim/: package.xml  setup.cfg  setup.py
src/tunnel_inspection_sim/config/: bridge.yaml
src/tunnel_inspection_sim/launch/: spawn_robot.launch.py
src/tunnel_inspection_sim/models/: yolov8_crack_seg.pt:Zone.Identifier
src/tunnel_inspection_sim/models/tunnel/: model.sdf  tunnel.gltf  tunnel_visual.mtl
src/tunnel_inspection_sim/models/tunnel/cracks/: crack_ground_truth.csv  crack_texture_size_gt.csv
src/tunnel_inspection_sim/models/tunnel/gt/: cracks_uv_gt.json
src/tunnel_inspection_sim/models/tunnel/scripts/: make_tunnel_texture.py
src/tunnel_inspection_sim/tunnel_inspection_sim/: crack_detector.py
src/tunnel_inspection_sim/urdf/: tunnel_robot.xacro
src/tunnel_inspection_sim/worlds/: tunnel_world.sdf
